# bearings

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
bearings/: __init__.py  __main__.py  classify.py  cli.py  core.py  ledger.py  loop.py  model.py  narrate.py  render.py
bearings/sessions/: __init__.py  base.py  claude_code.py  generic_jsonl.py  null.py
tests/: test_bookend.py  test_classify.py  test_loop.py  test_render.py  test_sessions.py
