[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bearings"
version = "0.1.0"
description = "Deterministic, model-agnostic 'where am I' digest for any git repo — orientation as a parse, not an LLM call."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Bruke" }]
keywords = ["git", "orientation", "standup", "digest", "agent", "llm", "deterministic", "log"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Version Control :: Git",
  "Environment :: Console",
]
dependencies = []  # zero runtime dependencies — Python stdlib only

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bearings = "bearings.cli:main"

[project.urls]
Homepage = "https://github.com/bruke/bearings"

[tool.setuptools.packages.find]
include = ["bearings*"]
